--- a/linux/.config/i3/config.d/applications.conf
+++ b/linux/.config/i3/config.d/applications.conf
@@ -12,11 +12,17 @@ bindsym Mod1+Tab exec --no-startup-id $HOME/.config/rofi/bin/window_switcher
 # Sound
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% && pkill --signal SIGRTMIN+12 i3blocks#increase sound volume
 bindsym Page_Up exec --no-startup-id pactl set-sink-volume 0 +5% && pkill --signal SIGRTMIN+12 i3blocks#increase sound volume
-
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym Page_Down exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+# Playerctl
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym Mod1+space exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym Mod1+n exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+bindsym Mod1+p exec --no-startup-id playerctl previous
 
 # Ctrl+shift+v to paste from clipboard
 # bindsym Control+Shift+v exec --no-startup-id $HOME/.local/bin/clipboard.sh
