--- a/linux/.config/i3/config.d/workspaces.conf
+++ b/linux/.config/i3/config.d/workspaces.conf
@@ -30,7 +30,7 @@ assign [class="^Google-chrome$"] → $ws1
 assign [class="^Slack$"] → $ws1
 
 # Home
-assign [class="^Firefox$"] → $ws2
+assign [class="^firefox$"] → $ws2
 assign [class="^thunderbird-esr$"] → $ws3
 
 
