--- a/linux/.config/i3/i3blocks.conf
+++ b/linux/.config/i3/i3blocks.conf
@@ -1,9 +1,8 @@
 # i3blocks configuration file
 
 # Global properties
-separator=false
 markup=pango
-
+separator=false
 
 # CPU Usage
 [cpu]
@@ -58,33 +57,20 @@ color=#f5c2e7
 [ip]
 command=ip -4 addr show $(ip route show default | awk '/default/ {print $5}') | grep -oP '(?<=inet\s)\d+(\.\d+){3}'
 interval=30
-label=
+label=
 color=#cdd6f4
 
 # Internet Speed
 [speed]
 command=$HOME/.local/bin/bandwidth.sh
 interval=5
-label=
 color=#f2cdcd
-
-# Docker
-[docker]
-command=systemctl is-active --quiet docker && echo ""
-interval=10
-color=#89b4fa
-
-# Kubernetes
-[kubernetes]
-command=kubectl config current-context
-interval=10
-label=k8s
-color=#89dceb
 
 # Volume
 [volume]
-command=pactl list sinks | grep '^[[:space:]]Volume:' | head -n $(( $(pactl list sinks | grep -c '^[[:space:]]Volume:') / 2 + 1 )) | tail -n 1 | awk '{print $5}'
+command=~/.local/bin/volume.sh get
 interval=1
+signal=1
 label=
 color=#f5a97f
 
@@ -101,3 +87,17 @@ command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
 label=
 color=#f5e0dc
+
+# Docker
+[docker]
+command=systemctl is-active --quiet docker && echo "  Running "  || echo "  Stopped "
+interval=10
+color=#89b4fa
+
+# Kubernetes
+[kubernetes]
+command=kubectl config current-context
+interval=10
+label=k8s
+color=#89dceb
+
