--- a/linux/.config/i3/config.d/floating_windows.conf
+++ b/linux/.config/i3/config.d/floating_windows.conf
@@ -20,3 +20,8 @@ for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move d
 for_window [class="(?i)qemu-system"] floating enable
 for_window [class="(?i)vlc"] floating disable
 
+#for_window [class=zoom] floating enable, move position center
+for_window [class="^zoom$" title="^.*(?<!Zoom Meeting)$"] floating enable, move position center
+
+for_window [class="(?i)pavucontrol"] floating enable, move position mouse
+for_window [class="(?i)pavucontrol" instance="pavucontrol-bar"] move down $height px
