--- a/linux/.config/i3/config.d/statusbar.conf
+++ b/linux/.config/i3/config.d/statusbar.conf
@@ -11,8 +11,8 @@ bar {
 
     height $height
     strip_workspace_numbers yes
-    padding 2px
-    # mode hide
+    padding 4px
+    mode hide
 
     colors {
         statusline         $text
