--- a/linux/.config/i3/config.d/workspaces.conf
+++ b/linux/.config/i3/config.d/workspaces.conf
@@ -25,16 +25,16 @@ bindsym $mod+Shift+0 move container to workspace $ws0
 
 # Workspace assignment
 
-# Office
 assign [class="^Google-chrome$"] → $ws1
-assign [class="^Slack$"] → $ws1
+assign [class="^firefox$"] → $ws1
 
-# Home
-assign [class="^firefox$"] → $ws2
-assign [class="^thunderbird-esr$"] → $ws3
+assign [class="^thunderbird-esr$"] → $ws2
 
+assign [class="^Slack$"] → $ws3
+assign [class="^TelegramDesktop$"] → $ws3
 
-assign [class="^TelegramDesktop$"] → $ws4
+assign [class="^pavucontrol$"] → $ws4
+assign [class="^blueman-manager$"] → $ws4
 
 assign [class="^gnome-system-monitor$"] → $ws5
 
