--- a/linux/.config/picom.conf
+++ b/linux/.config/picom.conf
@@ -7,18 +7,12 @@
 backend = "glx";
 # backend = "xrender";
 
-# Enable/disable shadows
+# Enable shadows for windows
 shadow = true;
-
-# The radius of the shadow's blur
-shadow-radius = 12;
-
-# The opacity of the shadow
-shadow-opacity = 0.75;
-
-# The offset for shadows in the X and Y directions
-shadow-offset-x = -15;
-shadow-offset-y = -15;
+shadow-radius = 10;
+shadow-opacity = 0.6;
+shadow-offset-x = -10;
+shadow-offset-y = -10;
 
 # Specify which windows should have shadows
 shadow-exclude = [
@@ -36,12 +30,10 @@ shadow-exclude = [
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
-# Enable/disable fading effects
+# Fading for smoother transitions
 fading = true;
-
-# The time in milliseconds for fade in/out
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
 
 # Specify which windows should not have fading effects
 fade-exclude = [
@@ -51,14 +43,21 @@ fade-exclude = [
     "class_g = 'popup'",
     "class_g = 'notification'",
     "class_g = 'toolbar'",
-    "class_g = 'splash'",
+    "class_g = 'splash'"
 ];
 
-# Enable/disable transparency for inactive windows
-inactive-opacity = 0.96;
+# Animation settings (requires picom-jonaburg)
+# Set animation-stiffness to control the smoothness of animations
+animation-stiffness = 150;   # Lower value = slower animation, higher = faster
 
-# Enable/disable transparency for active windows
+# Set animations for opening and closing windows
+animation-for-open-window = "fly-in";
+animation-for-close-window = "fade-out";
+
+# Transparency settings
+inactive-opacity = 0.85;
 active-opacity = 1.0;
+frame-opacity = 0.9;
 
 # Specify which windows should not have transparency
 opacity-rule = [
@@ -73,20 +72,13 @@ vsync = true;
 # Undirect fullscreen windows to avoid conflict
 unredir-if-possible = true;
 
-# Enable/disable window frame transparency
-frame-opacity = 0.90;
-
 # Enable/disable transparency for popup menus
 menu-opacity = 0.90;
 
-# Blur background of transparent windows
+# Blur settings (optional)
 blur-background = true;
-
-# Set blur method: "none", "kernel", "box", "gaussian"
-blur-method = "gaussian";
-
-# Set blur strength
-blur-strength = 5;
+blur-method = "dual_kawase";
+blur-strength = 7;
 
 # Specify which windows should not have blur
 blur-background-exclude = [
@@ -102,4 +94,13 @@ blur-background-exclude = [
 ];
 
 focus-exclude = ["class_g = 'zoom'"];
-corner-radius = 10;
+
+corner-radius = 12;
+
+corner-exclude = [
+    "class_g = 'popup'",
+    "class_g = 'notification'",
+    "class_g = 'toolbar'",
+    "class_g = 'splash'",
+    "class_g = 'i3bar'"
+];
