--- a/linux/.config/i3/config.d/autostart.conf
+++ b/linux/.config/i3/config.d/autostart.conf
@@ -1,8 +1,7 @@
 # Startup
 
 ## Autokill
-exec --no-startup-id killall -9 ksuperkey xfce4-power-manager &
-exec --no-startup-id killall dunst;
+exec --no-startup-id killall dunst picom;
 
 ## Notification Daemon
 exec --no-startup-id dunst &
@@ -10,8 +9,8 @@ exec --no-startup-id dunst &
 ## Composite Manager
 exec --no-startup-id picom -b &
 
-## Power Manager
-exec --no-startup-id xfce4-power-manager
+# Ibus daemon for Keyboard
+exec --no-startup-id ibus-daemon &
 
 # Network Manager
 # Ensure the package 'network-manager-gnome' is installed
@@ -25,22 +24,19 @@ exec --no-startup-id blueman-applet &
 # exec --no-startup-id redshift-gtk &
 
 # Start xautolock to lock the screen after 30 seconds of inactivity
-exec --no-startup-id xautolock -time 0 -locker "$i3dir/i3exit lock" -detectsleep -corners 0-0-0-0 -cornerdelay 0 -cornerredelay 0 -notify 5 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 5 seconds'"
-
-# Ibus daemon for Keyboard
-exec --no-startup-id ibus-daemon &
+# exec --no-startup-id xautolock -time 0 -locker "$i3dir/i3exit lock" -detectsleep -cornerdelay 0 -cornerredelay 0 -notify 5 -notifier "notify-send -u critical -t 5000 -- 'LOCKING screen in 5 seconds'"
 
 # Clipboard Manager
 # exec --no-startup-id clipman &
 
-exec --no-startup-id i3-msg 'exec google-chrome --profile-directory="Default"'
-exec --no-startup-id i3-msg 'exec firefox'
+
+exec --no-startup-id i3-msg 'exec google-chrome --profile-directory="Profile 1"'
 exec --no-startup-id i3-msg 'exec code'
 exec --no-startup-id i3-msg 'exec kitty'
 exec --no-startup-id i3-msg 'exec spotify'
 exec --no-startup-id i3-msg 'exec thunderbird'
-exec --no-startup-id i3-msg 'exec telegram-desktop'
-exec --no-startup-id i3-msg 'exec transmission-gtk'
-exec --no-startup-id i3-msg 'exec gnome-system-monitor'
-exec --no-startup-id i3-msg 'exec thunar'
-exec --no-startup-id i3-msg 'exec zoom'
+# exec --no-startup-id i3-msg 'exec telegram-desktop'
+# exec --no-startup-id i3-msg 'exec transmission-gtk'
+# exec --no-startup-id i3-msg 'exec gnome-system-monitor'
+# exec --no-startup-id i3-msg 'exec thunar'
+# exec --no-startup-id i3-msg 'exec zoom'
