--- a/linux/.config/i3/config.d/system_settings.conf
+++ b/linux/.config/i3/config.d/system_settings.conf
@@ -2,4 +2,4 @@ workspace_auto_back_and_forth yes
 force_display_urgency_hint 0 ms
 focus_on_window_activation urgent
 hide_edge_borders both
-workspace_layout tabbed
+# workspace_layout tabbed
