--- a/linux/.config/kitty/kitty.conf
+++ b/linux/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Fonts
-font_family                     Maple Mono
+font_family                     Maple Mono Normal
 bold_font                       auto
 italic_font                     auto
 bold_italic_font                auto
-font_size                       14.0
+font_size                       11.0
 
 # Include
 include                         $HOME/.config/kitty/colors.conf
@@ -30,4 +30,4 @@ window_resize_step_lines        1
 # Border
 window_border_width             0
 
-linux_display_server            x11
+linux_display_server            auto
