feat(security): implement comprehensive security hardening modules
- Add ssh_hardening module with client/server configuration and key management
- Add firewall_basic module supporting UFW, firewalld, and iptables
- Add fail2ban module with intrusion prevention and custom jails
- Add audit_logging module with auditd, rsyslog, and systemd journal
- Add automatic_updates symlink (references system_updates.sh)
- Add tmux detach binding (prefix + d) to standard configuration

Security modules provide enterprise-grade hardening per specifications.
All modules follow component framework with proper validation.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,9 @@ bind C-a send-prefix
 # Reload configuration file with prefix + r
 bind r source-file ~/.tmux.conf \; display-message "🔄 Config reloaded!"
 
+# Detach session with prefix + d (standard tmux binding)
+bind d detach-client
+
 # Better window splitting with visual characters
 bind | split-window -h -c "#{pane_current_path}"  # Split vertically with |
 bind - split-window -v -c "#{pane_current_path}"  # Split horizontally with -
