--- a/linux/.config/kitty/title-format.conf
+++ b/linux/.config/kitty/title-format.conf
@@ -1,29 +1,23 @@
 # Kitty Tab Title Configuration
-# To show user@hostname(IP) - cmd format in tabs
+# Enhanced tab titles that show user@hostname(IP) - command format
+# This works with the shell-env.sh configuration that sets terminal titles
 
-# Custom tab title that shows more information
-# Note: We'll configure the shell prompt to provide this info in the title
+# Tab title templates - uses {title} from terminal escape sequences
+# The shell configuration automatically sets titles in format: user@hostname(IP) - command
+active_tab_title_template           {fmt.fg._afc3fb}{fmt.bg.default}{fmt.fg._1d2030}{fmt.bg._afc3fb} {title} {fmt.fg._afc3fb}{fmt.bg.default}
+tab_title_template                  {fmt.fg._3c414c}{fmt.bg.default}{fmt.fg._626b7e}{fmt.bg._3c414c} {title} {fmt.fg._3c414c}{fmt.bg.default}
 
-# Show tab index and title
-active_tab_title_template           {fmt.fg._afc3fb}{fmt.bg.default}{fmt.fg._1d2030}{fmt.bg._afc3fb} [{index}] {title} {fmt.fg._afc3fb}{fmt.bg.default}
-tab_title_template                  {fmt.fg._3c414c}{fmt.bg.default}{fmt.fg._626b7e}{fmt.bg._3c414c} [{index}] {title} {fmt.fg._3c414c}{fmt.bg.default}
+# Expected title formats:
+# - At prompt: "user@hostname(192.168.1.100)"
+# - Running command: "user@hostname(192.168.1.100) - nvim"
+# - Long commands are truncated to just command name (e.g., "nvim" instead of "nvim file.txt")
 
-# Shell function to set title with user@hostname(IP) - command format
-# Add this to your .zshrc or .bashrc:
-#
-# function set_terminal_title() {
-#     local ip=$(hostname -I | awk '{print $1}' 2>/dev/null || echo "no-ip")
-#     local current_dir=$(basename "$PWD")
-#     local cmd="${1:-shell}"
-#     printf '\033]0;%s@%s(%s) - %s in %s\007' "$USER" "$HOSTNAME" "$ip" "$cmd" "$current_dir"
-# }
-#
-# # Set title before each command
-# preexec() {
-#     set_terminal_title "$1"
-# }
-#
-# # Set title after each command
-# precmd() {
-#     set_terminal_title
-# }
+# To manually refresh IP address in titles, run: refresh_kitty_ip
+# The IP is cached per session for performance
+
+# Available kitty title variables (not used here, but available):
+# {title} - Terminal title set by shell
+# {index} - Tab index number  
+# {layout_name} - Current layout name
+# {num_windows} - Number of windows in tab
+# {num_window_groups} - Number of window groups
